// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should add, move, and remove in arrays 1`] = `
Array [
  Object {
    "from": 2,
    "path": Array [],
    "to": 1,
    "type": "Move",
  },
  Object {
    "path": Array [
      2,
    ],
    "type": "Add",
  },
  Object {
    "path": Array [
      3,
    ],
    "type": "Remove",
  },
]
`;

exports[`it should attempt to find moved array items 1`] = `
Array [
  Object {
    "path": Array [
      0,
      "value",
    ],
    "type": "Edit",
  },
  Object {
    "from": 2,
    "path": Array [],
    "to": 1,
    "type": "Move",
  },
  Object {
    "path": Array [
      3,
    ],
    "type": "Add",
  },
]
`;

exports[`it should diff objects 1`] = `
Array [
  Object {
    "path": Array [
      "a",
    ],
    "type": "Edit",
  },
  Object {
    "path": Array [
      "b",
    ],
    "type": "Edit",
  },
  Object {
    "path": Array [
      "c",
    ],
    "type": "Edit",
  },
  Object {
    "path": Array [
      "e",
    ],
    "type": "Edit",
  },
  Object {
    "path": Array [
      "f",
      3,
    ],
    "type": "Add",
  },
  Object {
    "path": Array [
      "g",
      "j",
    ],
    "type": "Add",
  },
]
`;

exports[`it should find object rename 1`] = `
Array [
  Object {
    "from": "a",
    "path": Array [],
    "to": "b",
    "type": "Rename",
  },
]
`;
